# yata

./: .env  .env_debug  .gitignore  Dockerfile  Makefile  README.md  docker-compose-debug.yml  docker-compose.yml  pubspec.yaml
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/yata/: MainActivity.kt
api/: Cargo.toml  Dockerfile
api/src/: apps.rs  elements.rs  errors.rs  inputs.rs  lib.rs  main.rs  middlewares.rs  routes.rs
api/tests/: integration_tests.rs
frontend/: Dockerfile  pubspec.yaml
frontend/android/app/: build.gradle
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/test/: widget_test.dart
frontend/web/: index.html
ios/Runner/: Info.plist
keycloak_proxy/: Cargo.toml  Dockerfile
keycloak_proxy/src/: main.rs
lib/: main.dart
web/: manifest.json
